@@ -24,6 +24,7 @@
 - ensure negative cache isn't updated on remount.
 - dont add wildcard to negative cache.
 - add a prefix to program map stdvars.
+- add config option to force use of program map stdvars.
 
 28/03/2014 autofs-5.0.9
 =======================
